--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-1.1 Changelog
+1.16.5-1.0.2.0 Changelog
+Format: MCVERSION-MAJORMOD.MAJORAPI.MINOR.PATCH
 ====
-- 1.1 Fixed teleport issues. Added crafting recipes and textures (ender ring texture missing).
-- 1.0 Added items and main functionality.
+- 1.0.2.0 Replaced Ender Ring with Aspect Shard, added Ender Trap and Shulker Wand with texture and functionalities,
+    added Aspected Arrows with texture (functionalities not implemented). Added working config file. Added creative tab.
+- 1.0.1.0 Fixed teleport issues. Added crafting recipes and textures (ender ring texture missing).
+- 1.0.0.0 Added items and main functionality.
