Changed cooldown mechanic for Aspect of the End and Shulker Wand. Repeated use before the end of the cooldown will reduce durability. Added cooldown options to config.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,10 @@
-1.16.5-1.0.0.0 Changelog
+1.16.5-1.0.4.0 Changelog
 Format: MCVERSION-MAJORMOD.MAJORAPI.MINOR.PATCH
 ====
-- 1.0.0.0 Release!
+- 1.0.4.0 Changed cooldown mechanic for Aspect of the End and Shulker Wand. Repeated use before the end of the cooldown
+    will reduce durability. Added cooldown options to config.
+- 1.0.3.0 Release!
+- 1.0.x.x Skipped because of version renaming.
 - 0.0.3.0 Added anvil repair recipes with Aspect Shard.
 - 0.0.2.1 Fixed Shulker wand stacking, and broken crafting recipe.
 - 0.0.2.0 Replaced Ender Ring with Aspect Shard, added Ender Trap and Shulker Wand with texture and functionalities,
