--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.end_aspected.aspected_arrow": "Aspected Arrow",
   "itemGroup.mainGroupTab": "End Aspected",
   "block.end_aspected.ender_trap": "Ender Trap",
-  "msg.aspect_of_the_end.cooldown": "Too fast!",
-  "msg.aspect_of_the_end.trapped" : "You got trapped!"
+  "msg.aspect_of_the_end.cooldown": "Slow down! Your sword will lose durability during cooldown.",
+  "msg.aspect_of_the_end.trapped" : "You got trapped!",
+  "msg.shulker_wand.cooldown": "Slow down! Your wand will lose durability during cooldown."
 }
