--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,10 @@
 1.16.5-1.0.5.1 Changelog
 =========================
-- 1.0.5.1 Minor fixes to teleporing particles.
+- 1.0.6.0 Added Ender Slayer enchantment. Rebalanced Weaponsmith Villager trades.
+- 1.0.5.1 Minor fixes to teleporting particles.
 - 1.0.5.0 Now Teleporting resets fall distance. Added particle effect for use during cooldown.
 - 1.0.4.1 Additional cooldown rework. Added config options of Aspect of the end cooldown. Added config options for cooldown mode (reduce durability or block use). Creative players don't get cooldowns.
-- 1.0.4.0 Changed cooldown mechanic for Aspect of the End and Shulker Wand. Repeated use before the end of the cooldown will reduce durability. Added cooldown options to config. Added villager trades! Now weaponsmiths can trade for shards.
+- 1.0.4.0 Changed cooldown mechanic for Aspect of the End and Shulker Wand. Repeated use before the end of the cooldown will reduce durability. Added cooldown options to config. Added Villager trades! Now Weaponsmith Villagers can trade for shards.
 - 1.0.3.0 Release!
 - 1.0.x.x Skipped because of version renaming.
 - 0.0.3.0 Added anvil repair recipes with Aspect Shard.
