--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -1,6 +1,9 @@
 {
   "enchantment.end_aspected.ender_slayer": "Ender Slayer",
   "enchantment.end_aspected.ender_slayer.desc": "Increase damage against End mobs",
+  "enchantment.end_aspected.destabilise": "Destabilise",
+  "enchantment.end_aspected.destabilise.desc": "Inflicts Unstable Phase effect on mobs",
+  "effect.end_aspected.unstable_phase": "Unstable Phase",
   "item.end_aspected.aspect_of_the_end": "Aspect of the End",
   "item.end_aspected.netherforged_aspect_of_the_end": "Netherforged Aspect of the End",
   "item.end_aspected.dragonforged_aspect_of_the_end": "Dragonforged Aspect of the End",
