--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -14,7 +14,7 @@
   "block.end_aspected.ender_trap": "Ender Trap",
   "msg.aspect_of_the_end.cooldown1": "Slow down! Your sword will lose durability during cooldown.",
   "msg.aspect_of_the_end.cooldown2": "Slow down!",
-  "msg.aspect_of_the_end.trapped" : "You got trapped!",
+  "msg.aspect_of_the_end.disrupted": "Teleport disrupted!",
   "msg.shulker_wand.cooldown1": "Slow down! Your wand will lose durability during cooldown.",
   "msg.shulker_wand.cooldown2": "Slow down!"
 }
