--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 1.16.5-1.0.6.0 Changelog
 =========================
+- 1.0.6.1 Fixed Unstable Phase bug that caused an Enderman in water to lag the game by attempting a teleport every game tick, by allowing Endermen to teleport when under the effect.
 - 1.0.6.0 Added Ender Slayer enchantment. Added Unstable Phase potion effect. Added Destabilise treasure enchantment. Rebalanced Weaponsmith Villager trades. Changed package id to match CurseForge username.
 - 1.0.5.1 Minor fixes to teleporting particles.
 - 1.0.5.0 Now Teleporting resets fall distance. Added particle effect for use during cooldown.
