--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-1.16.5-1.0.6.2 Changelog
+1.16.5-1.0.7.0 Changelog
 =========================
+- 1.0.7.0 Now teleporting too much will give Unstable Phase (texture missing). Added config option to disable and control when this is triggered. Removed player status messages.
 - 1.0.6.2 Changed Ender Slayer level scaling.
 - 1.0.6.1 Fixed Unstable Phase bug that caused an Enderman in water to lag the game by attempting a teleport every game tick, by allowing Endermen to teleport when under the effect.
 - 1.0.6.0 Added Ender Slayer enchantment. Added Unstable Phase potion effect. Added Destabilise treasure enchantment. Rebalanced Weaponsmith Villager trades. Changed package id to match CurseForge username.
