--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 1.16.5-1.0.9.0 Changelog
 =========================
-- 1.0.9.0 Fixed mod not working on servers or crashing them:
+- 1.0.9.0 Added config dor Ender Trap blocking teleports instead of trapping the entity. Fixed mod not working on servers or crashing them:
     - Fixed teleports not working on server.
     - Fixed Shulker Wand crashing server.
     - Fixed Ender Trap not working on server.
