--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-1.16.5-1.0.10.1 Changelog
+1.16.5-1.0.11.0 Changelog
 =========================
+- 1.0.11.0 Added tooltips to handheld items.
 - 1.0.10.1 Fixed Unstable Phase duration bug.
 - 1.0.10.0 Reworked cooldowns. Now items always lose durability on use (configurable). Aspect of the End cannot be used during cooldown anymore and will trigger Unstable Phase after 2 (configurable) cooldown cycles if used repeatedly. If the player doesn't use the item, cooldown counters (Aote uses and cooldown cycles) will decay.
 - 1.0.9.0 Added config for Ender Trap blocking teleports instead of trapping the entity. Fixed mod not working on servers or crashing them: fixed Aspect of The End, its upgrades and Ender Trap not working on server, fixed Shulker Wand and Aspected Arrows crashing server.
