--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 2.1.0-1.16.5 Changelog
 =========================
-- 2.1.0 Now Aspected Arrows can hit entities too. Reworked teleport code to be smoother when teleporting against walls, celings and floors.
+- 2.1.0 Now Aspected Arrows can hit entities too. Reworked teleport code to be smoother when teleporting against walls, celings and floors. Teleporting in a 1 block tall space will make you crawl.
 - 2.0.2 Fixed bug with Ender Slayer Enchantment crashing the game. Fixed Shulker Wand tooltip.
 - 2.0.1 Reworked Shuker Wand texture to reflect crafting recipe.
 - 2.0.0 Renamed versions (Removed major API version as it is unused). Reworked Aspect of the End texture to make more evident the embedded Aspect Shard. Removed ender trap jamming option (jamming Endermen in water lags the game enormously, let them teleport). Now Ender Trap will trap entities based on their current position and not on their landing position. Ender Trap now also traps Ender Pearl and Chorus Fruit teleports.
