--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.end_aspected.aspect_shard": "Aspect Shard",
   "item.end_aspected.shulker_wand": "Shulker Wand",
   "item.end_aspected.aspected_arrow": "Aspected Arrow",
+  "item.end_aspected.souvenir": "Souvenir",
   "itemGroup.mainGroupTab": "End Aspected",
   "block.end_aspected.ender_trap": "Ender Trap",
   "tooltip.end_aspected.more": "§7Hold §r§eSHIFT§r§7 for more!§r",
