--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -12,9 +12,10 @@
   "item.end_aspected.aspected_arrow": "Aspected Arrow",
   "item.end_aspected.souvenir": "Souvenir",
   "item.end_aspected.voidling_spawn_egg": "Voidling Spawn Egg",
-  "item.end_aspected.void_seed": "Void Seed",
+  "item.end_aspected.void_seed": "§1Void Seed",
   "itemGroup.mainGroupTab": "End Aspected",
   "block.end_aspected.ender_trap": "Ender Trap",
+  "entity.end_aspected.voidling": "Voidling",
   "tooltip.end_aspected.more": "§7Hold §r§eSHIFT§r§7 for more!§r",
   "tooltip.end_aspected.aspect_of_the_end_ability": "§6§lITEM ABILITY§r: \n§6Teleports you in the direction you're facing.§r\n",
   "tooltip.end_aspected.teleport_reach": " %s§r§2 Teleport Reach§r\n",
