Updated textures and localisation. Added Curios support.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -12,7 +12,7 @@
   "item.end_aspected.aspected_arrow": "Aspected Arrow",
   "item.end_aspected.souvenir": "Souvenir",
   "item.end_aspected.voidling_spawn_egg": "Voidling Spawn Egg",
-  "item.end_aspected.void_seed": "§1Void Seed",
+  "item.end_aspected.void_seed": "Void Seed",
   "itemGroup.mainGroupTab": "End Aspected",
   "block.end_aspected.ender_trap": "Ender Trap",
   "tooltip.end_aspected.more": "§7Hold §r§eSHIFT§r§7 for more!§r",
