--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-2.2.1-1.16.5 Changelog
+2.2.2-1.16.5 Changelog
 =========================
+- 2.2.2 Minor texture adjustments, added Dimension Hopper item (creative only).
 - 2.2.1 Various bug fixes.
 - 2.2.0 Added Voidling and Void Seed.
 - 2.1.1 Improved Aspected Arrow behaviour. Increased aspected arrow count from crafting recipe to 3.
