--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -19,6 +19,7 @@
   "itemGroup.mainGroupTab": "End Aspected",
 
   "block.end_aspected.ender_trap": "Ender Trap",
+  "block.end_aspected.void_vein": "Void Vein",
 
   "entity.end_aspected.voidling": "Voidling",
 
