--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,10 @@
 2.3.0-1.19.2 Changelog
 =========================
-- 2.3.0 Added Void Vein. Now Voidlings will cover the ground in Void Veins when they walk. Changed voidling loot table. Added animated textures.
+- 2.3.0 Added Void Vein. Now Voidlings will cover the ground in Void Veins when they walk. Changed voidling loot table. Reduced voidling movement speed. Added animated textures.
 - 2.2.1 Minor texture adjustments, added Dimension Hopper item (creative only). Added config option to set Voidling Spawn chance when teleporting.
 - 2.2.0 Added Voidling and Void Seed.
-- 2.1.1 Smoothed out aspected arrow behaviour. Now Aspected Arrows can hit entities too. Increased arrow count on crafting to 3. Fixed bug that made Ender Slayer enchantment stack with itself. Fixed Destabilise enchantment not working.
-- 2.1.0 Reworked teleport code to be smoother when teleporting against walls, celings and floors. Teleporting in 1 block tall spaces will make you crawl.
+- 2.1.1 Improved Aspected Arrow behaviour. Now Aspected Arrows can hit entities too. Increased Aspected Arrow count from crafting recipe to 3. Fixed bug that made Ender Slayer enchantment stack with itself. Fixed Destabilise enchantment not working.
+- 2.1.0 Reworked teleport code to be smoother when teleporting against walls, ceilings and floors. Teleporting in 1 block tall spaces will make you crawl.
 - 2.0.2 Fixed bug with Ender Slayer Enchantment crashing the game.
 - 2.0.1 Reworked Shulker Wand texture to reflect crafting recipe.
 - 2.0.0 Updated to 1.19.2. Renamed versions (Removed major API number as it is unused). Reworked Aspect of the End texture to make more evident the embedded Aspect Shard. Removed ender trap jamming option (jamming Endermen in water lags the game enormously, let them teleport). Now Ender Trap will trap entities based on their current position and not on their landing position. Ender Trap now also traps Ender Pearl and Chorus Fruit teleports.
