Improved Void Tree generation, added related tile entities and effects.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -5,9 +5,15 @@
   "enchantment.end_aspected.destabilise.desc": "Inflicts Unstable Phase effect on mobs",
 
   "effect.end_aspected.unstable_phase": "Unstable Phase",
+  "effect.end_aspected.void_sickness": "Void Sickness",
   "item.minecraft.potion.effect.unstable_phase": "Unstable Phase Potion",
   "item.minecraft.splash_potion.effect.unstable_phase": "Splash Potion of Unstable Phase",
   "item.minecraft.lingering_potion.effect.unstable_phase": "Lingering Potion of Unstable Phase",
+  "item.minecraft.tipped_arrow.effect.unstable_phase": "Arrow of Unstable Phase",
+  "item.minecraft.potion.effect.void_sickness": "Void Sickness Potion",
+  "item.minecraft.splash_potion.effect.void_sickness": "Splash Potion of Void Sickness",
+  "item.minecraft.lingering_potion.effect.void_sickness": "Lingering Potion of Void Sickness",
+  "item.minecraft.tipped_arrow.effect.void_sickness": "Arrow of Void Sickness",
 
   "item.end_aspected.aspect_of_the_end": "Aspect of the End",
   "item.end_aspected.netherforged_aspect_of_the_end": "Netherforged Aspect of the End",
