Added The Void and Void Expanse biome, Void Trees feature. Refactored IVoidVeinPlacer so that it can be used by world generator.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -29,6 +29,7 @@
   "itemGroup.mainGroupTab": "End Aspected",
 
   "block.end_aspected.ender_trap": "Ender Trap",
+  "block.end_aspected.void_stone": "Void Stone",
   "block.end_aspected.void_vein": "Void Vein",
   "block.end_aspected.void_leaves": "Void Leaves",
   "block.end_aspected.void_stem": "Void Stem",
