Added Void Items and Void Armor. Void armor cannot be worn. Need to refactor code to fix.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -26,6 +26,15 @@
   "item.end_aspected.voidbat_spawn_egg": "Voidbat Spawn Egg",
   "item.end_aspected.void_seed": "Void Seed",
   "item.end_aspected.dimension_hopper": "Dimension Hopper",
+  "item.end_aspected.void_sword": "Void Sword",
+  "item.end_aspected.void_pickaxe": "Void Pickaxe",
+  "item.end_aspected.void_axe": "Void Axe",
+  "item.end_aspected.void_shovel": "Void Shovel",
+  "item.end_aspected.void_hoe": "Void Hoe",
+  "item.end_aspected.void_helmet": "Void Helmet",
+  "item.end_aspected.void_chestplate": "Void Chestplate",
+  "item.end_aspected.void_leggings": "Void Leggings",
+  "item.end_aspected.void_boots": "Void Boots",
   "itemGroup.mainGroupTab": "End Aspected",
 
   "block.end_aspected.ender_trap": "Ender Trap",
