Added Void Block, ported DropExperienceBlock from 1.19.2

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -44,6 +44,7 @@
   "block.end_aspected.void_leaves": "Void Leaves",
   "block.end_aspected.void_stem": "Void Stem",
   "block.end_aspected.void_fungus": "Void Fungus",
+  "block.end_aspected.void": "Void",
 
   "entity.end_aspected.voidmite": "Voidmite",
   "entity.end_aspected.voidbat": "Voidbat",
