Fixed bugs caused by refactor. Added translation keys for new blocks. Added missing json files.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -43,7 +43,9 @@
   "block.end_aspected.void_vein": "Void Vein",
   "block.end_aspected.void_leaves": "Void Leaves",
   "block.end_aspected.void_stem": "Void Stem",
+  "block.end_aspected.stripped_void_stem": "Stripped Void Stem",
   "block.end_aspected.void_fungus": "Void Fungus",
+  "block.end_aspected.void_mycelium": "Void Mycelium",
   "block.end_aspected.void": "Void",
 
   "entity.end_aspected.voidmite": "Voidmite",
