Added Void Gem (missing texture). Changed IConnectedFlora::hasDistance to IConnectedFlora::isNode, removed AspectShardItem class as it could be replaced by a normal Item.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -10,10 +10,10 @@
   "item.minecraft.splash_potion.effect.unstable_phase": "Splash Potion of Unstable Phase",
   "item.minecraft.lingering_potion.effect.unstable_phase": "Lingering Potion of Unstable Phase",
   "item.minecraft.tipped_arrow.effect.unstable_phase": "Arrow of Unstable Phase",
-  "item.minecraft.potion.effect.void_sickness": "Void Sickness Potion",
-  "item.minecraft.splash_potion.effect.void_sickness": "Splash Potion of Void Sickness",
-  "item.minecraft.lingering_potion.effect.void_sickness": "Lingering Potion of Void Sickness",
-  "item.minecraft.tipped_arrow.effect.void_sickness": "Arrow of Void Sickness",
+  "item.minecraft.potion.effect.voidrue": "Voidrue Potion",
+  "item.minecraft.splash_potion.effect.voidrue": "Splash Potion of Voidrue",
+  "item.minecraft.lingering_potion.effect.voidrue": "Lingering Potion of Voidrue",
+  "item.minecraft.tipped_arrow.effect.voidrue": "Arrow of Voidrue",
 
   "item.end_aspected.aspect_of_the_end": "Aspect of the End",
   "item.end_aspected.netherforged_aspect_of_the_end": "Netherforged Aspect of the End",
@@ -26,6 +26,7 @@
   "item.end_aspected.voidbat_spawn_egg": "Voidbat Spawn Egg",
   "item.end_aspected.void_shade_spawn_egg": "Void Shade Spawn Egg",
   "item.end_aspected.void_seed": "Void Seed",
+  "item.end_aspected.void_sap": "Void Sap",
   "item.end_aspected.dimension_hopper": "Dimension Hopper",
   "item.end_aspected.void_sword": "Void Sword",
   "item.end_aspected.void_pickaxe": "Void Pickaxe",
