Added D-Brane and Void Gem textures, fixed Void Gem recipe, added armor models. Fixed Voidrue localisation.

--- a/src/main/resources/assets/end_aspected/lang/en_us.json
+++ b/src/main/resources/assets/end_aspected/lang/en_us.json
@@ -27,6 +27,7 @@
   "item.end_aspected.void_shade_spawn_egg": "Void Shade Spawn Egg",
   "item.end_aspected.void_seed": "Void Seed",
   "item.end_aspected.void_sap": "Void Sap",
+  "item.end_aspected.void_gem": "Void Gem",
   "item.end_aspected.d_brane": "D-Brane",
   "item.end_aspected.void_sword": "Void Sword",
   "item.end_aspected.void_pickaxe": "Void Pickaxe",
